fixed text spacing

--- a/sample-idea/jquery.fullPage.css
+++ b/sample-idea/jquery.fullPage.css
@@ -74,7 +74,7 @@ html, body {
 }
 .easing {
     -webkit-transition: all 0.7s ease-out;
-    -moz-transition: all 0.7s ease-out;
+    -moz-transition: all 0.3s ease-out;
     -o-transition: all 0.7s ease-out;
     transition: all 0.7s ease-out;
 }
