--- a/sample-idea/splash/css/test1.css
+++ b/sample-idea/splash/css/test1.css
@@ -9,11 +9,11 @@ Mobile
 @import url("css.monbile.css");
 
 /* */
-body {
+html, body {
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
-    -webkit-text-size-adjust:auto
-    height: 100%;
+    -webkit-text-size-adjust:auto;
+    height: 90%;
 }
 .btn {
   display: inline-block;
@@ -50,24 +50,32 @@ body {
 /* general */
 .h1-splash-top {
     font-size: 3.4285714285714284em;
-    opacity: .7;
+    color: #fff;
+    opacity: .5;
     text-align: left;
-    padding-top: 5%;
+    font-size: 36pt;
+    height: 200px;
+    top: -150px;
+    bottom: 20px;
     position: relative;
 }  
 .p-splash-top {
     font-family: ff-meta-serif-web-pro, Georgia, Times, "Times New Roman", serif;
-    opacity: .7;
+    color: #fff;
+    opacity: .5;
     text-align: left;
-    font-size: 2em;
-    padding-top: 0;
+    font-size: 16pt;
+    padding-bottom: -70px;
     position: relative;
 }
 .button-splash-top {
     font-size: 3.4285714285714284em;
+    color: #fff;
     opacity: .6;
     text-align: right;
-    padding-right: 5%;
+    padding-right: 60px;
+    top: -500;
+    height: 100px;
     position: relative;
 }  
 .section.top img {
@@ -77,7 +85,7 @@ body {
     max-width: 100%;
     position: relative;
     top: 0px;
-    width: 100%;
+    width: 1000%;
     z-index: 0;
     margin-bottom: 40px
 }
@@ -97,7 +105,7 @@ body {
     font-size: 7.5vw;
     letter-spacing: -1px;
     line-height: 1;
-    opacity: .7
+    opacity: .5
 }
 .section-top-caption {
     font-family: "ff-meta-serif-web-pro", Georgia, Times, "Times New Roman", serif;
@@ -129,7 +137,7 @@ h2 {
 }
 
 h3 {
-  font-size: 1.7142857142857142em;
+  font-size: 1.5142857142857142em;
 }
 
 h4 {
@@ -239,7 +247,7 @@ footer  p{
 \*------------------------------------*/
 @media screen and (max-device-width: 480px){
     body{
-        -webkit-text-size-adjust:none;
+        -webkit-text-size-adjust:auto;
         font-family:ff-meta-serif-web-pro, Georgia, Times, "Times New Roman", serif;
         padding:5px;
     }
